<resources>
    <string name="app_name">JaiJalaram</string>
    <string name="app_name_full">Jai Jalaram Snacks</string>
    <string name="app_name_guj">ન્યૂ ગણગોર</string>

    <string name="forgot_pass"><u>Forgot Pass</u></string>

    <string-array name="ip">
        <item>Select IP</item>
        <item>192.168.1.104</item>
        <item>192.168.43.191</item>
        <item>www.jayhpatel.tk</item>
        <item>192.168.225.47</item>
    </string-array>

    <string-array name="action">
        <item>@string/select_action</item>
        <item>@string/select_cat</item>
        <item>@string/select_items</item>
    </string-array>

    <string-array name="asd">
        <item>@string/select</item>
    </string-array>

    <string-array name="userType">
        <item>@string/user</item>
        <item>@string/manager</item>
        <item>@string/admin</item>
    </string-array>

    <string name="user">User</string>
    <string name="manager">Manager</string>
    <string name="admin">Admin</string>

    <string-array name="spnIc">
        <item>@string/catwise</item>
        <item>@string/itemwise</item>
    </string-array>

    <string-array name="custSale">
        <item>@string/custSale</item>
        <item>@string/custFav</item>
    </string-array>

    <string-array name="custAvg">
        <item>@string/year</item>
        <item>@string/month</item>
    </string-array>


    <string name="select">Select</string>

    <string name="custFav">Customer Fav</string>
    <string name="custSale">Customer Sale</string>
    <string name="timeCust">Cust Sale By Time</string>

    <string-array name="calType">
        <item>@string/day</item>
        <item>@string/date</item>
        <item>@string/week</item>
        <item>@string/month</item>
        <item>@string/year</item>
        <item>@string/itemtime</item>
    </string-array>

    <string-array name="someCal">
        <item>@string/year</item>
        <item>@string/month</item>
        <item>@string/date</item>
    </string-array>

    <string-array name="itemSale">
        <item>@string/catwise</item>
        <item>@string/itemwise</item>
        <item>@string/itemQty</item>
    </string-array>

    <string name="day">Day</string>
    <string name="date">Date</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="itemwise">Item Wise</string>
    <string name="catwise">Category Wise</string>
    <string name="itemtime">Time</string>
    <string name="itemQty">Item Qty</string>

    <string name="select_action">Select Action</string>
    <string name="select_cat">Enter Category</string>
    <string name="select_items">Enter Items</string>

    <string name="tab">\u0009\u0009\u0009\u0009\u0009</string>
    <string name="alert_dialog_title">Please Select</string>
    <string name="positive_button_text">Select</string>
    <string name="negative_button_text">Cancel</string>
    <string name="enter_email">Email</string>
    <string name="enter_password">Password</string>
    <string name="re_enter_password">Re Password</string>
    <string name="enter_mobile_no">Mobile No</string>
    <string name="clear">Clear</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_fname">Fname</string>
    <string name="enter_lname">Lname</string>
    <string name="enter_address">Address</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="address">Station Road, Bardoli</string>
    <string name="orders">Orders</string>
    <string name="home">Home</string>
    <string name="menu">Menu</string>
    <string name="favorites">Favorites</string>
    <string name="user_settings">User Settings</string>
    <string name="notification">Notification</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>

    <string name="add">Add</string>
    <string name="enter_category_name">Category Name</string>
    <string name="enter_item_name">Name</string>
    <string name="update">Update</string>
    <string name="description">Description</string>
    <string name="datetime">DateTime</string>
    <string name="enter_price">Price</string>

    <string name="cart">Cart</string>

    <string name="image_path">Image Path</string>
    <string name="enter_path">Path</string>
    <string name="select_image">Select Image</string>
    <string name="add_image">Add Image</string>
    <string name="upload">Upload</string>
    <string name="upload_image">Upload Image</string>
    <string name="delete">Delete</string>
    <string name="dsc">Description</string>
    <string name="rs">₹</string>
    <string name="qty">Qty</string>
    <string name="minus">Minus</string>
    <string name="search">Search</string>
    <string name="price">₹ 250.00</string>
    <string name="rate">4.3</string>
    <string name="ratings">50 ratings &amp; 10 reviews</string>
    <string name="details">Details</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="buy_now">BUY NOW</string>
    <string name="shop_now">Shop Now</string>
    <string name="empty_cart">Your Cart is empty !</string>
    <string name="otp">Otp</string>
    <string name="submit">Submit</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="join_date">Join Date</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="absent_all">Absent All</string>
    <string name="present_all">Present All</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="display_name">Display Name</string>

    <!--Reports-->
    <string name="periodic_reports">Periodic Reports</string>
    <string name="items_sale_reports">Items Sale Reports</string>
    <string name="customer_avg_reports">Customer Avg Sale Reports</string>
    <string name="customer_sale_reports">Customer Sale Reports</string>
    <string name="max_sale_by_customer">Max Sale Details Report</string>
    <string name="sale_by_customer">Report By Customer</string>
    <string name="custom_reports">Customized Reports</string>
    <string name="call">Call</string>
    <string name="confirmed">Confirmed:</string>
    <string name="specific_search_reports">Specific Search Reports</string>
    <string name="find">Find</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="date_wise_reports">Date Wise Sale Reports</string>
    <string name="attendance_report">Attendance Report</string>
    <string name="datewise_attendance">DateWise Attendance</string>
    <string name="delivered">Delivered:</string>
    <string name="not_confirm">Not Confirm</string>
    <string name="not_deliver">Not Deliver</string>
    <string name="refresh">Refresh</string>
    <string name="reports">Reports</string>

</resources>
