<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_action_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/menucat"
            android:title="@string/menu" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/order"
            android:title="@string/orders" />
        <item
            android:id="@+id/nav_fav"
            android:icon="@drawable/fav"
            android:title="@string/favorites" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/profile"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/cart"
            android:title="@string/cart" />
    </group>

    <item android:title="@string/user_settings">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/logout"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
