<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_mobile_no"
                android:textColor="@color/blue"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tvAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/btnCall"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:contentDescription="@string/call"
                android:scaleType="center"
                android:src="@android:drawable/sym_action_call" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/confirmed"
                android:textColor="@color/black" />

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/sbtnConfirm"
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delivered"
                android:textColor="@color/black" />

            <com.kyleduo.switchbutton.SwitchButton
                android:id="@+id/sbtnDeliver"
                android:layout_width="wrap_content"
                android:layout_height="30dp" />

        </LinearLayout>

    </LinearLayout>

    <Spinner
        android:id="@+id/spnAction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/asd"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:contentDescription="@string/delete"
        android:scaleType="center"
        android:src="@android:drawable/ic_menu_delete"
        android:visibility="gone" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etFind"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/search"
        android:inputType="textCapWords"
        android:visibility="gone"
        app:met_floatingLabel="highlight" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>
