<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:maxLength="30"
        app:met_floatingLabel="highlight" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etMobile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/enter_mobile_no"
        android:inputType="number"
        android:maxLength="10"
        app:met_floatingLabel="highlight" />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/etAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:hint="@string/enter_address"
        android:inputType="textCapWords"
        android:maxLength="100"
        android:maxLines="4"
        app:met_floatingLabel="highlight" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rdbMale"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:checked="true"
            android:text="@string/male"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/rdbFemale"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/female"
            android:textSize="20sp" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/etJoinDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:enabled="false"
            android:hint="@string/join_date"
            android:inputType="textEmailAddress"
            app:met_floatingLabel="highlight" />

        <ImageButton
            android:id="@+id/btnDate"
            android:layout_width="60dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            android:src="@android:drawable/ic_input_add" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvAddedOn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:gravity="center|end">

        <Button
            android:id="@+id/btnClear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btnback"
            android:minHeight="@dimen/min_height"
            android:minWidth="@dimen/min_width"
            android:text="@string/clear"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btnAdd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/btnback"
            android:minHeight="@dimen/min_height"
            android:minWidth="@dimen/min_width"
            android:text="@string/add"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>