<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardBackgroundColor="@color/transparent"
        card_view:cardCornerRadius="15dp"
        card_view:cardElevation="3dp"
        card_view:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/cardLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/trans"
            android:orientation="horizontal">

            <include
                layout="@layout/sdv_image"
                android:layout_width="100dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:background="@drawable/back" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/orders"
                        android:textColor="@color/black"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/tvPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:text="@string/enter_price"
                        android:textColor="@color/red"
                        android:textSize="20sp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/etDsc"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp"
                    android:hint="@string/dsc"
                    android:inputType="textCapWords" />

                <TextView
                    android:id="@+id/tvDsc"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dsc"
                    android:textColor="@color/light_grey"
                    android:textSize="18sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageButton
                        android:id="@+id/btnMin"
                        android:layout_width="35dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/transparent"
                        android:contentDescription="@string/minus"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_remove_circle" />

                    <TextView
                        android:id="@+id/tvQty"
                        android:layout_width="20dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="1"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:visibility="visible" />

                    <ImageButton
                        android:id="@+id/btnAdd"
                        android:layout_width="35dp"
                        android:layout_height="30dp"
                        android:layout_gravity="center"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/transparent"
                        android:contentDescription="@string/add"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_add_circle" />

                    <ImageButton
                        android:id="@+id/btnDelete"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        android:layout_gravity="center"
                        android:layout_marginEnd="10dp"
                        android:layout_marginStart="20dp"
                        android:background="@color/transparent"
                        android:contentDescription="@string/delete"
                        android:scaleType="fitCenter"
                        android:src="@android:drawable/ic_menu_delete" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>